fix(table): Sets word break on table cell

--- a/components/table/src/_mixin.scss
+++ b/components/table/src/_mixin.scss
@@ -71,6 +71,7 @@
 @mixin dictu-table__cell {
   border-inline-end: var(--govnl-table-cell-border-inline-end-width) solid
     var(--govnl-table-cell-border-inline-end-color);
+  overflow-wrap: break-word;
   padding-block: var(--govnl-table-cell-padding-block-start) var(--govnl-table-cell-padding-block-end);
   padding-inline: var(--govnl-table-cell-padding-inline-start) var(--govnl-table-cell-padding-inline-end);
   text-align: start;
